# ELSED

./: .gitignore  CMakeLists.txt  HyperConfig.h
example/: Debug.h  LineDetectMain.cpp  Npy2cvMat.h  SegMain.cpp  main.cpp
images/: 1_GTNormal.npy
include/: ELSED.h  EdgeDrawer.h  FullSegmentInfo.h  PlaneDetector.h  Utils.h
src/: ELSED.cpp  ELSED.h  EdgeDrawer.cpp  EdgeDrawer.h  FullSegmentInfo.cpp  FullSegmentInfo.h  PlaneDetector.cpp  Tools.cpp
